// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GetAllExams() in tag.js correct tag creation when accessing invalid name parameter to match snapshot 1`] = `undefined`;

exports[`Testing GetAllExams() in tag.js correct tag creation when accessing valid name parameter to match snapshot 1`] = `undefined`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for atrial fibrillation to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for cardiac stent (<12 months) to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for coronary artery disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for difibrillator to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for history of cerebral disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for history of pulmonary vascular disease disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for peripheral vascular disease (PVD) to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for transient heart disease (TIA) to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for transient heart disease to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for valvular heart disease / valve replacement to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing GetExams() for all cardiovascular diseases in tag.js correct array of examinations for valvular heart failure to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of ACE-I to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of ARB to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Anticoagulants to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Antiplatelet (ASA excluded) to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Digoxin to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Diuretics to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of Lithium to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of NSAIDS to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all medication use in tag.js correct array of pre op exams for use of use of systemic steroid used within 6 months to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for bleeding disorders (hemophiliac | DVT) to match snapshot 1`] = `
Array [
  "G&S",
  "CBC",
  "PTT/INR",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for diabetes to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for hepatic disease to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
  "LFT",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of active bleeding to match snapshot 1`] = `
Array [
  "CBC",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of adrenal disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of anemia to match snapshot 1`] = `
Array [
  "CBC",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of major systemic endocrine disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for history of pituitary disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for present malignancy to match snapshot 1`] = `
Array [
  "CBC",
  "CXR",
]
`;

exports[`Testing GetExams() for all other diseases in tag.js correct array of pre op exams for renal disease (on dialysis or at risk of Acute Kidney Injury [AKI]) to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing GetExams() for all pulmonary diseases in tag.js correct array of examinations for severe COPD, home oxygen, pulmonary HTN to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "CXR",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Atrial fibrillation pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Atrial fibrillation pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Cardiac stent (< 12 months) pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Cardiac stent (< 12 months) pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Coronary Artery Disease pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Coronary Artery Disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Defibriallator pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Defibriallator pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Heart failure pre op exams to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Heart failure pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of cerebral disease pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of cerebral disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of pulmonary vascular disease pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js History of pulmonary vascular disease pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Peripheral vasculara disease (PVD) pre op exams to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Peripheral vasculara disease (PVD) pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Stroke pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Stroke pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Transient ischemic attack (TIA) pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Transient ischemic attack (TIA) pre op exams to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Valvular heart disease / valve replacement pre op exams to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`Testing PatientExamsNeeded() for cardiovascular diseases in PreopRecommendation.js Valvular heart disease / valve replacement pre op exams to match snapshot 2`] = `
Array [
  ConditionalExam {
    "conditionPhrase": "Is valve mechanical?",
    "exams": Array [
      "CBC",
    ],
  },
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ACE-I to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ACE-I to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ARB to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of ARB to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Anticoagulant to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Anticoagulant to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Antiplatelet (ASA excluded) to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Antiplatelet (ASA excluded) to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Digoxin to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Digoxin to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Diuretics to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Diuretics to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Lithium to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of Lithium to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of NSAIDS to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of NSAIDS to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of systemic steroid used within 6 months to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing PatientExamsNeeded() for medication use in PreopRecommendation.js set of preop exams for use of systemic steroid used within 6 months to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for no inputs in PreopRecommendation.js set of preop exams for no diseases or medication to match snapshot 1`] = `Array []`;

exports[`Testing PatientExamsNeeded() for no inputs in PreopRecommendation.js set of preop exams for no diseases or medication to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for bleeding disorders (hemophiliac | DVT) to match snapshot 1`] = `
Array [
  "G&S",
  "CBC",
  "PTT/INR",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for bleeding disorders (hemophiliac | DVT) to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 1`] = `
Array [
  "ECG",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 2`] = `
Array [
  ConditionalExam {
    "conditionPhrase": "Has patient gone at least 3 months since an Hb1AC?",
    "exams": Array [
      "HbA1C",
    ],
  },
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 3`] = `
Array [
  "CBC",
  "CXR",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for diabetes (on Insulin or 2 oral agents) to match snapshot 4`] = `
Array [
  ConditionalExam {
    "conditionPhrase": "Is patient on chemo?",
    "exams": Array [
      "ECG",
      "Renal Panel (Creat + Lytes)",
      "PTT/INR",
    ],
  },
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for hepatic disease to match snapshot 1`] = `
Array [
  "CBC",
  "Renal Panel (Creat + Lytes)",
  "PTT/INR",
  "LFT",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for hepatic disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of active bleeding to match snapshot 1`] = `
Array [
  "CBC",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of active bleeding to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of adrebal disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of adrebal disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of anemia to match snapshot 1`] = `
Array [
  "CBC",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of anemia to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of pituitary disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of pituitary disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of systemic endocrine disease to match snapshot 1`] = `
Array [
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for history of systemic endocrine disease to match snapshot 2`] = `Array []`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for renal disease (on dialysis or at risk for Acute Kidney Injury [AKI] to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing PatientExamsNeeded() for other diseases in PreopRecommendation.js set of preop exams for renal disease (on dialysis or at risk for Acute Kidney Injury [AKI] to match snapshot 2`] = `Array []`;

exports[`Testing Tag() in tag.js correct tag creation when using GetAllExams() to match snapshot 1`] = `undefined`;

exports[`Testing Tag() in tag.js correct tag creation when using GetAllExams() to match snapshot 2`] = `
Object {
  "conditionalExams": Object {
    "ACE-I": Array [],
    "ARB": Array [],
    "Anticoagulants": Array [],
    "Antiplatelet (ASA excluded)": Array [],
    "Atrial fibrillation / History of irregular heart beat": Array [],
    "Bleeding disorders (hemophiliac | DVT)": Array [],
    "Cardiac Stent (< 12 months)": Array [],
    "Coronary artery disease": Array [],
    "DaleDisease": Array [],
    "Defibrillator / Pacemaker": Array [],
    "Diabetes (on Insulin or 2 oral agents)": Array [
      ConditionalExam {
        "conditionPhrase": "Has patient gone at least 3 months since an Hb1AC?",
        "exams": Array [
          "HbA1C",
        ],
      },
    ],
    "Digoxin": Array [],
    "Diuretics": Array [],
    "Heart Failure": Array [],
    "Hepatic disease": Array [],
    "History of active bleeding": Array [],
    "History of adrenal disease": Array [],
    "History of anemia": Array [],
    "History of cerebral disease": Array [],
    "History of major systemic endocrine disease": Array [],
    "History of pituitary disease": Array [],
    "History of pulmonary vascular disease": Array [],
    "JonDisease": Array [
      ConditionalExam {
        "conditionPhrase": "Maybe you need more tests?",
        "exams": Array [
          "TSH",
        ],
      },
    ],
    "Lithium": Array [],
    "NSAIDS": Array [],
    "Peripheral Vascular disease (PVD)": Array [],
    "Present malignancy / surgery for malignancy": Array [
      ConditionalExam {
        "conditionPhrase": "Is patient on chemo?",
        "exams": Array [
          "ECG",
          "Renal Panel (Creat + Lytes)",
          "PTT/INR",
        ],
      },
    ],
    "Renal disease (on dialysis or at risk for Acute Kidney Injury [AKI])": Array [],
    "Severe COPD, Home Oxygen, Pulmonary HTN": Array [],
    "Stroke": Array [],
    "Systemic steroid use within 6 months": Array [],
    "Transient Ischemic Attack (TIA)": Array [],
    "Valvular heart disease / Valve Replacement": Array [
      ConditionalExam {
        "conditionPhrase": "Is valve mechanical?",
        "exams": Array [
          "CBC",
        ],
      },
    ],
  },
  "exams": Object {
    "ACE-I": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "ARB": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "Anticoagulants": Array [
      "CBC",
      "Renal Panel (Creat + Lytes)",
      "PTT/INR",
    ],
    "Antiplatelet (ASA excluded)": Array [
      "CBC",
      "Renal Panel (Creat + Lytes)",
      "PTT/INR",
    ],
    "Atrial fibrillation / History of irregular heart beat": Array [
      "ECG",
    ],
    "Bleeding disorders (hemophiliac | DVT)": Array [
      "G&S",
      "CBC",
      "PTT/INR",
    ],
    "Cardiac Stent (< 12 months)": Array [
      "ECG",
    ],
    "Coronary artery disease": Array [
      "ECG",
    ],
    "DaleDisease": Array [
      "ECG",
    ],
    "Defibrillator / Pacemaker": Array [
      "ECG",
    ],
    "Diabetes (on Insulin or 2 oral agents)": Array [
      "ECG",
      "Renal Panel (Creat + Lytes)",
      "Gluc",
    ],
    "Digoxin": Array [
      "ECG",
      "Renal Panel (Creat + Lytes)",
    ],
    "Diuretics": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "Heart Failure": Array [
      "ECG",
      "CBC",
      "Renal Panel (Creat + Lytes)",
    ],
    "Hepatic disease": Array [
      "CBC",
      "Renal Panel (Creat + Lytes)",
      "PTT/INR",
      "LFT",
    ],
    "History of active bleeding": Array [
      "CBC",
    ],
    "History of adrenal disease": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "History of anemia": Array [
      "CBC",
    ],
    "History of cerebral disease": Array [
      "ECG",
    ],
    "History of major systemic endocrine disease": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "History of pituitary disease": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "History of pulmonary vascular disease": Array [
      "ECG",
    ],
    "JonDisease": Array [
      "CBC",
      "Renal Panel (Creat + Lytes)",
    ],
    "Lithium": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "NSAIDS": Array [
      "Renal Panel (Creat + Lytes)",
    ],
    "Peripheral Vascular disease (PVD)": Array [
      "ECG",
      "Renal Panel (Creat + Lytes)",
    ],
    "Present malignancy / surgery for malignancy": Array [
      "CBC",
      "CXR",
    ],
    "Renal disease (on dialysis or at risk for Acute Kidney Injury [AKI])": Array [
      "ECG",
      "CBC",
      "Renal Panel (Creat + Lytes)",
    ],
    "Severe COPD, Home Oxygen, Pulmonary HTN": Array [
      "ECG",
      "CBC",
      "CXR",
    ],
    "Stroke": Array [
      "ECG",
    ],
    "Systemic steroid use within 6 months": Array [
      "Renal Panel (Creat + Lytes)",
      "Gluc",
    ],
    "Transient Ischemic Attack (TIA)": Array [
      "ECG",
    ],
    "Valvular heart disease / Valve Replacement": Array [
      "ECG",
    ],
  },
}
`;

exports[`Testing Tag() in tag.js correct tag creation when using GetExams() to match snapshot 1`] = `
Array [
  "ECG",
]
`;

exports[`set of preop exams for severe COPD, home oxygen, pulmonary HTN to match snapshot 1`] = `
Array [
  "ECG",
  "CBC",
  "CXR",
]
`;

exports[`set of preop exams for severe COPD, home oxygen, pulmonary HTN to match snapshot 2`] = `Array []`;
